# RAYTRACER

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  run_tests.sh  start.sh
include/: GlobalException.hpp
include/Core/: Camera.hpp  Scene.hpp
include/Factory/: LightFactory.hpp  PrimitiveFactory.hpp
include/Graphics/: Graphics.hpp
include/Lights/: AmbientLight.hpp  CompositeLight.hpp  DirectionalLight.hpp  ILight.hpp  PointLight.hpp
include/Material/: Material.hpp
include/Maths/: Ray.hpp
include/Parser/: ObjParser.hpp  SceneParser.hpp
include/Primitives/: CompositePrimitive.hpp  Cone.hpp  Cylinder.hpp  IPrimitive.hpp  Plane.hpp  Sphere.hpp  TangleCube.hpp  Torus.hpp  Triangle.hpp
include/Renderer/: Renderer.hpp
include/Utils/: Color.hpp  PolynomialSolver.hpp  PpmWriter.hpp  Vector3.hpp
scenes/: demo_scene.cfg  obj.cfg  simple_reflection.cfg  with_cone.cfg  with_cylinder.cfg  with_plane.cfg  with_tanglecube.cfg  with_torus.cfg  with_triangle.cfg
src/: main.cpp
src/Core/: Camera.cpp  Scene.cpp
src/Factory/: LightFactory.cpp  PrimitiveFactory.cpp
src/Graphics/: Graphics.cpp
src/Lights/: AmbientLight.cpp  CompositeLight.cpp  DirectionalLight.cpp  PointLight.cpp
src/Maths/: Ray.cpp
src/Parser/: ObjParser.cpp  SceneParser.cpp
src/Primitives/: CompositePrimitive.cpp  Cone.cpp  Cylinder.cpp  Plane.cpp  Sphere.cpp  TangleCube.cpp  Torus.cpp  Triangle.cpp
src/Renderer/: Renderer.cpp
src/Utils/: Color.cpp  PolynomialSolver.cpp  PpmWriter.cpp  Vector3.cpp
tests/: CMakeLists.txt  Color_test.cpp  Cone_test.cpp  Cylinder_test.cpp  DirectionalLight_test.cpp  Material_test.cpp  Plane_test.cpp  PointLight_test.cpp  Ray_test.cpp  Sphere_test.cpp  TangleCube_test.cpp  Torus_test.cpp  Triangle_test.cpp  Vector3_test.cpp  main_test.cpp
